# numbers

./: CHANGELOG.md  LICENSE  README.md  natural-numbers.cabal  numbers.cabal  package.yaml  stack.yaml
src/: Main.hs  MyNatural.hs
src/Data/: Natural.hs  NewInteger.hs
